--- a/app/pages/catalog_list/index.njk
+++ b/app/pages/catalog_list/index.njk
@@ -35,12 +35,13 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <div class="item-checkbox">
-            <div class="checkbox checked">
-              <div class="checkbox-icon"></div>
-            </div>
-            <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
-          </div>
+
+          <label class="item-checkbox custom-checkbox flex fS aiC">
+            <input type="checkbox" checked>
+            <span class="checkmark checkbox"></span>
+            <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
+          </label>
+
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
           <div class="item-button">
             <div class="button-name">この資料をダウンロードする</div>
@@ -51,10 +52,11 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <div class="item-checkbox">
-            <div class="checkbox"></div>
-            <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
-          </div>
+          <label class="item-checkbox custom-checkbox flex fS aiC">
+            <input type="checkbox">
+            <span class="checkmark checkbox"></span>
+            <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
+          </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
           <div class="item-button">
             <div class="button-name">この資料をダウンロードする</div>
@@ -65,10 +67,11 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <div class="item-checkbox">
-            <div class="checkbox"></div>
-            <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
-          </div>
+          <label class="item-checkbox custom-checkbox flex fS aiC">
+            <input type="checkbox">
+            <span class="checkmark checkbox"></span>
+            <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
+          </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
           <div class="item-button">
             <div class="button-name">この資料をダウンロードする</div>
@@ -79,10 +82,11 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <div class="item-checkbox">
-            <div class="checkbox"></div>
-            <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
-          </div>
+          <label class="item-checkbox custom-checkbox flex fS aiC">
+            <input type="checkbox">
+            <span class="checkmark checkbox"></span>
+            <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
+          </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
           <div class="item-button">
             <div class="button-name">この資料をダウンロードする</div>
@@ -93,10 +97,11 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <div class="item-checkbox">
-            <div class="checkbox"></div>
-            <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
-          </div>
+          <label class="item-checkbox custom-checkbox flex fS aiC">
+            <input type="checkbox">
+            <span class="checkmark checkbox"></span>
+            <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
+          </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
           <div class="item-button">
             <div class="button-name">この資料をダウンロードする</div>
@@ -107,10 +112,11 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <div class="item-checkbox">
-            <div class="checkbox"></div>
-            <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
-          </div>
+          <label class="item-checkbox custom-checkbox flex fS aiC">
+            <input type="checkbox">
+            <span class="checkmark checkbox"></span>
+            <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
+          </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
           <div class="item-button">
             <div class="button-name">この資料をダウンロードする</div>
@@ -121,10 +127,11 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <div class="item-checkbox">
-            <div class="checkbox"></div>
-            <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
-          </div>
+          <label class="item-checkbox custom-checkbox flex fS aiC">
+            <input type="checkbox">
+            <span class="checkmark checkbox"></span>
+            <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
+          </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
           <div class="item-button">
             <div class="button-name">この資料をダウンロードする</div>
@@ -135,10 +142,11 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <div class="item-checkbox">
-            <div class="checkbox"></div>
-            <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
-          </div>
+          <label class="item-checkbox custom-checkbox flex fS aiC">
+            <input type="checkbox">
+            <span class="checkmark checkbox"></span>
+            <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
+          </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
           <div class="item-button">
             <div class="button-name">この資料をダウンロードする</div>
