--- a/app/pages/catalog_list/index.njk
+++ b/app/pages/catalog_list/index.njk
@@ -36,7 +36,7 @@ link:"news_list"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
 
-          <label class="item-checkbox custom-checkbox flex fS aiC">
+          <label class="item-checkbox custom-checkbox flex fS aifS">
             <input type="checkbox" checked>
             <span class="checkmark checkbox"></span>
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
@@ -52,7 +52,7 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <label class="item-checkbox custom-checkbox flex fS aiC">
+          <label class="item-checkbox custom-checkbox flex fS aifS">
             <input type="checkbox">
             <span class="checkmark checkbox"></span>
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
@@ -67,7 +67,7 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <label class="item-checkbox custom-checkbox flex fS aiC">
+          <label class="item-checkbox custom-checkbox flex fS aifS">
             <input type="checkbox">
             <span class="checkmark checkbox"></span>
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
@@ -82,7 +82,7 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <label class="item-checkbox custom-checkbox flex fS aiC">
+          <label class="item-checkbox custom-checkbox flex fS aifS">
             <input type="checkbox">
             <span class="checkmark checkbox"></span>
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
@@ -97,7 +97,7 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <label class="item-checkbox custom-checkbox flex fS aiC">
+          <label class="item-checkbox custom-checkbox flex fS aifS">
             <input type="checkbox">
             <span class="checkmark checkbox"></span>
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
@@ -112,7 +112,7 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <label class="item-checkbox custom-checkbox flex fS aiC">
+          <label class="item-checkbox custom-checkbox flex fS aifS">
             <input type="checkbox">
             <span class="checkmark checkbox"></span>
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
@@ -127,7 +127,7 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <label class="item-checkbox custom-checkbox flex fS aiC">
+          <label class="item-checkbox custom-checkbox flex fS aifS">
             <input type="checkbox">
             <span class="checkmark checkbox"></span>
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
@@ -142,7 +142,7 @@ link:"news_list"
           <div class="item-thumbnail">
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
-          <label class="item-checkbox custom-checkbox flex fS aiC">
+          <label class="item-checkbox custom-checkbox flex fS aifS">
             <input type="checkbox">
             <span class="checkmark checkbox"></span>
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
