--- a/app/pages/whitepaper/index.njk
+++ b/app/pages/whitepaper/index.njk
@@ -51,7 +51,7 @@ link:"#"
           </div>
           <div class="grid__card--content">
             <div class="content__description">
-              <label class="custom-checkbox flex fS aiC">
+              <label class="custom-checkbox flex fS aifS">
                 <input type="checkbox">
                 <span class="checkmark"></span> <span
                   class="custom-check-box-label">資料タイトルが入ります資料タイトルが入ります資料タイトルが入ります資料タイトルが入ります資料</span>
@@ -70,7 +70,7 @@ link:"#"
           </div>
           <div class="grid__card--content">
             <div class="content__description">
-              <label class="custom-checkbox flex fS aiC">
+              <label class="custom-checkbox flex fS aifS">
                 <input type="checkbox">
                 <span class="checkmark"></span> <span
                   class="custom-check-box-label">資料タイトルが入ります資料タイトルが入ります資料タイトルが入ります資料タイトルが入ります資料</span>
@@ -95,7 +95,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
@@ -112,7 +112,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
@@ -129,7 +129,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
@@ -146,7 +146,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
@@ -163,7 +163,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
@@ -180,7 +180,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
@@ -197,7 +197,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
@@ -214,7 +214,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
@@ -231,7 +231,7 @@ link:"#"
             <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
           </div>
           <h5 class="ttl-quinary">
-            <label class="custom-checkbox flex fS aiC">
+            <label class="custom-checkbox flex fS aifS">
               <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">資料タイトルが入ります。</span>
             </label>
