--- a/app/assets/scss/4-pages/_whitepaper.scss
+++ b/app/assets/scss/4-pages/_whitepaper.scss
@@ -237,7 +237,9 @@
         width: 100%;
         padding: 30px 32px 30px 32px;
         box-shadow: 0 3px 20px $gray-color-4;
-
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         &:hover {
           .grid__card--img {
             transition: all 0.3s;
@@ -289,7 +291,6 @@
             margin-right: 10px;
             gap: 7px;
             margin-top: 7px;
-            align-items: center;
             flex-wrap: nowrap;
 
             input[type="checkbox"] {
@@ -331,6 +332,8 @@
             .custom-check-box-label {
               font-size: 18px;
               font-weight: bold;
+              line-height: 1.2;
+              padding-bottom: 5px;
             }
           }
         }
@@ -344,6 +347,12 @@
           font-size: 16px;
           font-weight: 400;
           margin-bottom: 32px;
+          display: -webkit-box;
+          -webkit-line-clamp: 4;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          word-break: break-word;
         }
 
         .grid__card--cat {
