--- a/app/pages/catalog_detail/shi-harai_bk.njk
+++ b/app/pages/catalog_detail/shi-harai_bk.njk
@@ -469,41 +469,10 @@
       </section>
 
       <section class="section-form">
-        <form class="form-primary">
+        <div class="form-primary">
           <h2 class="form-title">ダウンロード申し込みフォーム</h2>
-          
           <form id="mktoForm_1380" novalidate="novalidate" class="mktoForm mktoHasWidth mktoLayoutAbove"
             style="font-family: Arial, Verdana, sans-serif; font-size: 14px; color: rgb(51, 51, 51);">
-            <style type="text/css">
-              .mktoForm .mktoButtonWrap.mktoSimple .mktoButton {
-                color: #fff;
-                border: 1px solid #75ae4c;
-                padding: 0.4em 1em;
-                font-size: 1em;
-                background-color: #99c47c;
-                background-image: -webkit-gradient(linear, left top, left bottom, from(#99c47c), to(#75ae4c));
-                background-image: -webkit-linear-gradient(top, #99c47c, #75ae4c);
-                background-image: -moz-linear-gradient(top, #99c47c, #75ae4c);
-                background-image: linear-gradient(to bottom, #99c47c, #75ae4c);
-              }
-
-              .mktoForm .mktoButtonWrap.mktoSimple .mktoButton:hover {
-                border: 1px solid #447f19;
-              }
-
-              .mktoForm .mktoButtonWrap.mktoSimple .mktoButton:focus {
-                outline: none;
-                border: 1px solid #447f19;
-              }
-
-              .mktoForm .mktoButtonWrap.mktoSimple .mktoButton:active {
-                background-color: #75ae4c;
-                background-image: -webkit-gradient(linear, left top, left bottom, from(#75ae4c), to(#99c47c));
-                background-image: -webkit-linear-gradient(top, #75ae4c, #99c47c);
-                background-image: -moz-linear-gradient(top, #75ae4c, #99c47c);
-                background-image: linear-gradient(to bottom, #75ae4c, #99c47c);
-              }
-            </style>
             <style>
               .form-primary .mktoFormRow {
                 margin-bottom: 30px;
@@ -971,7 +940,7 @@
               });
             });
           </script>
-        </form>
+        </div>
       </section>
     </div>
 
