add modal comparision card

--- a/app/assets/scss/3-modules/_form.scss
+++ b/app/assets/scss/3-modules/_form.scss
@@ -438,6 +438,12 @@
   align-items: center;
   flex-wrap: nowrap;
 
+  &.show {
+    .checkmark::after {
+      display: block;
+    }
+  }
+
   input[type="checkbox"] {
     display: none;
   }
