--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -16,10 +16,10 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [
-  {
-    text: "ビジネスカードを作りたい",
-    link: "/business_card_creation/"
-  }
+{
+text: "ビジネスカードを作りたい",
+link: "/business_card_creation/"
+}
 ] %}
 
 {# Main content #}
@@ -115,7 +115,8 @@
               <div class="ttl-tertiary">セゾンプラチナ・ビジネス プロ アメリカン・エキスプレス®・カード</div>
               <div class="card-img">
                 <a href="/platinum_business_pro/">
-                  <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+                  <img src="/assets/img/credit_cards/saison-03.png" alt="セゾンプラチナ・ビジネス プロ アメリカン・エキスプレス®・カード"
+                    class="credit-card-img">
                 </a>
               </div>
             </div>
@@ -127,7 +128,7 @@
               <div class="ttl-tertiary">セゾンゴールド・<br> ビジネス プロ・カード</div>
               <div class="card-img">
                 <a href="/gold_business_pro/">
-                  <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="credit-card-img">
+                  <img src="/assets/img/credit_cards/saison-01.png" alt="セゾンゴールド・ビジネス プロ・カード" class="credit-card-img">
                 </a>
               </div>
             </div>
@@ -338,8 +339,8 @@
 
             <div class="card-row">
               <div class="ttl-secondary">
-              22,000円（税込） <br> <span class="ttl-normal">初年度無料<br>
-              <strong>2</strong>年目以降<strong>22,000</strong>円（税込）<strong>/</strong> 年会費優遇</span>
+                22,000円（税込） <br> <span class="ttl-normal">初年度無料<br>
+                  <strong>2</strong>年目以降<strong>22,000</strong>円（税込）<strong>/</strong> 年会費優遇</span>
               </div>
               <div class="ttl-normal">追加カード年会費 <strong> 3,300 </strong>円（税込）</div>
 
@@ -455,7 +456,7 @@
             <div class="circle-child first">
             </div>
             <div class="normal-child">
-            JALの利用が多いので<br>マイルを貯めたい
+              JALの利用が多いので<br>マイルを貯めたい
             </div>
           </div>
 
@@ -481,7 +482,7 @@
             <div class="circle-child second">
             </div>
             <div class="normal-child">
-             広告費や税金、サーバー費用<br>など事業費の支払いで利用し<br>たい
+              広告費や税金、サーバー費用<br>など事業費の支払いで利用し<br>たい
             </div>
           </div>
 
@@ -530,7 +531,7 @@
             <div class="circle-child third">
             </div>
             <div class="normal-child">
-             確定申告に備えて<br>支払いを一元管理したい
+              確定申告に備えて<br>支払いを一元管理したい
             </div>
           </div>
 
@@ -579,39 +580,33 @@
           <div class="card-list-grid left">
             <div class="card-detail">
               <div class="card-head">セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード</div>
-              <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img" />
-              <div>
-                <label class="custom-checkbox">
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  <span class="custom-check-box-label">他のカードと比較する</span>
-                </label>
-              </div>
+              <img src="/assets/img/credit_cards/saison-03.png" alt="セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード"
+                class="credit-card-img" />
+              <label class="custom-checkbox check cursor-pointer" data-select_card="select-sbs_pro">
+                <span class="checkmark"></span>
+                <span class="custom-check-box-label">他のカードと比較する</span>
+              </label>
             </div>
             <div class="card-detail">
               <div class="card-head">セゾンゴールド・ビジネス プロ・カード</div>
-              <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="credit-card-img" />
-              <div>
-                <label class="custom-checkbox">
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  <span class="custom-check-box-label">他のカードと比較する</span>
-                </label>
-              </div>
+              <img src="/assets/img/credit_cards/saison-01.png" alt="セゾンゴールド・ビジネス プロ・カード" class="credit-card-img" />
+              <label class="custom-checkbox check cursor-pointer" data-select_card="select-business_gold">
+                <span class="checkmark"></span>
+                <span class="custom-check-box-label">他のカードと比較する</span>
+              </label>
             </div>
             <div class="card-detail">
               <div class="card-head">セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード</div>
-              <img src="/assets/img/credit_cards/saison-02.png" alt="Your Image" class="credit-card-img" />
-              <div>
-                <label class="custom-checkbox">
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  <span class="custom-check-box-label">他のカードと比較する</span>
-                </label>
-              </div>
+              <img src="/assets/img/credit_cards/saison-02.png" alt="セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード"
+                class="credit-card-img" />
+              <label class="custom-checkbox check cursor-pointer" data-select_card="select-purchasing">
+                <span class="checkmark"></span>
+                <span class="custom-check-box-label">他のカードと比較する</span>
+              </label>
             </div>
           </div>
         </div>
+
         <div class="card-list-right">
           <div class="card-list-head right">
             中小規模ビジネスオーナー、個人事業主向け <br />（個人与信型ビジネスカード）
@@ -620,25 +615,21 @@
           <div class="card-list-grid right">
             <div class="card-detail">
               <div class="card-head">セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード</div>
-              <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img" />
-              <div>
-                <label class="custom-checkbox">
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  <span class="custom-check-box-label">他のカードと比較する</span>
-                </label>
-              </div>
+              <img src="/assets/img/credit_cards/american-express-01.png" alt="セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード"
+                class="credit-card-img" />
+              <label class="custom-checkbox check cursor-pointer" data-select_card="select-sbs">
+                <span class="checkmark"></span>
+                <span class="custom-check-box-label">他のカードと比較する</span>
+              </label>
             </div>
             <div class="card-detail">
               <div class="card-head">セゾンコバルト・ビジネス・ アメリカン・エキスプレス® ・カード</div>
-              <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img" />
-              <div>
-                <label class="custom-checkbox">
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  <span class="custom-check-box-label">他のカードと比較する</span>
-                </label>
-              </div>
+              <img src="/assets/img/credit_cards/american-express-02.png" alt="セゾンコバルト・ビジネス・ アメリカン・エキスプレス® ・カード"
+                class="credit-card-img" />
+              <label class="custom-checkbox check cursor-pointer" data-select_card="select-cobalt">
+                <span class="checkmark"></span>
+                <span class="custom-check-box-label">他のカードと比較する</span>
+              </label>
             </div>
           </div>
         </div>
@@ -646,9 +637,201 @@
 
       <div class="btn-container">
 
-        <a class="bondi_blue_outline_btn">
-          <span class="bondi_blue_outline_btn__tittle">選択したカードを比較する</span>
-        </a>
+        <button id="checkOpen" class="bondi_blue_outline_btn checkOpen campaign-modal js-comparison-modal">
+          <span class="bondi_blue_outline_btn__tittle test">選択したカードを比較する</span>
+        </button>
+
+        <div id="js-comparison-modal" class="modal-contents" style="display:none;">
+          <div class="modal-cont row js-comparison-modal">
+            <span class="free_box"></span>
+            <table class="comparison_table">
+              <thead>
+                <tr class="comparison_item">
+                  <th>
+                  </th>
+                  <th class="select-sbs_pro" id="select-sbs_pro">
+                    <figure class="fcs-card__image">
+                      <img src="/assets/img/credit_cards/saison-03.png" alt="セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード"
+                        class="shadow" />
+                    </figure>
+                    <h3 class="fcs-card__title">
+                      <span>セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード</span>
+                    </h3>
+                    <p class="btn">
+                      <a href="/service/platinum.html" class="more para_link form_para">お申し込みは<br
+                          class="show-small">こちら</a>
+                    </p>
+                    <span class="comparison_item_close">×</span>
+                  </th>
+                  <th class="select-business_gold" id="select-business_gold">
+                    <figure class="fcs-card__image">
+                      <img src="/assets/img/credit_cards/saison-01.png" alt="セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード"
+                        class="shadow" />
+                    </figure>
+                    <h3 class="fcs-card__title">
+                      <span>セゾンゴールド・ビジネス プロ・カード</span>
+                    </h3>
+                    <p class="btn">
+                      <a href="/service/gold.html" class="more para_link form_para">お申し込みは<br class="show-small">こちら</a>
+                    </p>
+                    <span class="comparison_item_close">×</span>
+                  </th>
+                  <th class="select-purchasing" id="select-purchasing">
+                    <figure class="fcs-card__image">
+                      <img src="/assets/img/credit_cards/saison-02.png" alt="セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード"
+                        class="shadow">
+                    </figure>
+                    <h3 class="fcs-card__title">
+                      <span>セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード</span>
+                    </h3>
+                    <p class="btn">
+                      <a href="/service/purchasing.html" class="more form_para">お申し込みは<br class="show-small">こちら</a>
+                    </p>
+                    <span class="comparison_item_close">×</span>
+                  </th>
+                  <th class="select-sbs" id="select-sbs">
+                    <figure class="fcs-card__image">
+                      <img src="/assets/img/credit_cards/american-express-01.png" alt="セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード"
+                        class="shadow">
+                    </figure>
+                    <h3 class="fcs-card__title">
+                      <span>セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード</span>
+                    </h3>
+                    <p class="btn">
+                      <a href="/service/sbs.html" class="more para_link">お申し込みは<br class="show-small">こちら</a>
+                    </p>
+                    <span class="comparison_item_close">×</span>
+                  </th>
+                  <th class="select-cobalt" id="select-cobalt">
+                    <figure class="fcs-card__image">
+                      <img src="/assets/img/credit_cards/american-express-02.png" alt="セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カード"
+                        class="shadow">
+                    </figure>
+                    <h3 class="fcs-card__title">
+                      <span>セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カード</span>
+                    </h3>
+                    <p class="btn">
+                      <a href="/service/cobalt.html" class="more para_link">お申し込みは<br class="show-small">こちら</a>
+                    </p>
+                    <span class="comparison_item_close">×</span>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="comparison_dt">
+                  <td class="row-0">特長</td>
+                  <td class="row-1">代表者／本会員年会費</td>
+                  <td class="row-2">追加カード年会費</td>
+                  <td class="row-3">カード発行枚数</td>
+                  <td class="row-4">申し込み資格</td>
+                  <td class="row-5">MORE</td>
+                </tr>
+                <tr class="select-sbs_pro comparison_item">
+                  <td class="row-0">
+                    <ul class="txt">
+                      <li>・プラチナカード</li>
+                      <li>・キャッシュバック率 1％<sup>※1</sup></li>
+                      <li>・支払いサイト 最長84日間<sup>※1</sup></li>
+                      <li>・海外最高1億円、国内最高5,000万円の旅行傷害保険</li>
+                    </ul>
+                  </td>
+                  <td class="row-1">27,500円（税込）</td>
+                  <td class="row-2">3,300円（税込）</td>
+                  <td class="row-3">100枚（代表者カード含）</td>
+                  <td class="row-4">中小規模法人代表者（未成年者除く）</td>
+                  <td class="row-5">
+                    <ul class="txt">
+                      <li>・プラチナ会員専用デスク</li>
+                      <li>・AMEXセンチュリオンデザイン採用</li>
+                      <li>・通常年会費469米ドルのプライオリティパスを<br class="hide-small">代表者様は無料でご登録可能</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr class="select-business_gold comparison_item">
+                  <td class="row-0">
+                    <ul class="txt">
+                      <li>・ゴールドカード</li>
+                      <li>・キャッシュバック率 0.5％<sup>※1</sup></li>
+                      <li>・支払いサイト 最長84日間<sup>※1</sup></li>
+                      <li>・海外最高5,000万円、国内最高5,000万円の旅行傷害保険</li>
+                    </ul>
+                  </td>
+                  <td class="row-1">3,300円（税込）</td>
+                  <td class="row-2">1,100円（税込）</td>
+                  <td class="row-3">100枚（代表者カード含）</td>
+                  <td class="row-4">中小規模法人代表者（未成年者除く）</td>
+                  <td class="row-5">
+                    <ul class="txt">
+                      <li>・国内ラウンジサービス</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr class="select-purchasing comparison_item">
+                  <td class="row-0">
+                    <ul class="txt">
+                      <li>・カードの発行なし</li>
+                      <li>・キャッシュバック率 0.5％<sup>※1</sup></li>
+                      <li>・支払いサイト 最長84日間<br>＋キャッシュバック率0.25％<sup>※1</sup></li>
+                    </ul>
+                  </td>
+                  <td class="row-1">11,000円（税込）</td>
+                  <td class="row-2">1,100円（税込）</td>
+                  <td class="row-3">100枚（代表者カード含）</td>
+                  <td class="row-4">中小規模法人代表者（未成年者除く）</td>
+                  <td class="row-5">
+                    <ul class="txt">
+                      <li>・部署名・費用項目名での発番可能</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr class="select-sbs comparison_item">
+                  <td class="row-0">
+                    <ul class="txt">
+                      <li>・プラチナカード</li>
+                      <li>・永久不滅ポイント 海外2倍</li>
+                      <li>・海外最高1億円、国内最高5,000万円の旅行傷害保険</li>
+                    </ul>
+                  </td>
+                  <td class="row-1">22,000円（税込）<span
+                      class="small">※年間200万円以上のショッピングのご利用で、次年度本会員年会費11,000円（税込）</span><br><span
+                      class="small red">初年度年会費無料</span></td>
+                  <td class="row-2">3,300円（税込）</td>
+                  <td class="row-3">10枚（本カード含）</td>
+                  <td class="row-4">個人事業主または経営者の方（学生、未成年を除く）</td>
+                  <td class="row-5">
+                    <ul class="txt">
+                      <li>・プラチナ会員専用デスク</li>
+                      <li>・AMEXセンチュリオンデザイン採用</li>
+                      <li>・通常年会費469米ドルのプライオリティパスを<br class="hide-small">本会員様は無料で登録可能</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr class="select-cobalt comparison_item">
+                  <td class="row-0">
+                    <ul class="txt">
+                      <li>・永久不滅ポイント 海外2倍/特定加盟店4倍</li>
+                      <li>・追加カード年会費永年無料</li>
+                    </ul>
+                  </td>
+                  <td class="row-1"><span class="red bold">永年無料</span></td>
+                  <td class="row-2"><span class="red bold">永年無料</span></td>
+                  <td class="row-3">10枚（本カード含）</td>
+                  <td class="row-4">個人事業主またはフリーランス、経営者の方（高校生を除く）</td>
+                  <td class="row-5">
+                    <ul class="txt">
+                      <li>・AMEXセンチュリオンデザイン採用</li>
+                    </ul>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <ul class="notes">
+              <li>1：サービスはカード毎に選択いただくサービスとなります。</li>
+              <li>上記一覧は概要となります。詳しくはサービス記載項目をご確認ください。</li>
+            </ul>
+          </div>
+        </div>
       </div>
 
       <a href="https://www.saisoncard.co.jp/am_lp/advice_business/" target="_blank" class="banner-btn">
@@ -660,13 +843,16 @@
             <div class="ttl-quinary">ご利用目的やビジネス規模に合わせて、最適なビジネスカード探しをお手伝い!</div>
             <div class="ttl-main">おすすめカード診断
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="20" class="arrow-svg" viewBox="0 0 25 20">
-                <path id="Polygon_57" data-name="Polygon 57" d="M10,0,20,25H0Z" transform="translate(25) rotate(90)" fill="#0297b5"/>
+                <path id="Polygon_57" data-name="Polygon 57" d="M10,0,20,25H0Z" transform="translate(25) rotate(90)"
+                  fill="#0297b5" />
               </svg>
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="20" class="arrow-svg" viewBox="0 0 25 20">
-                <path id="Polygon_57" data-name="Polygon 57" d="M10,0,20,25H0Z" transform="translate(25) rotate(90)" fill="#0297b5"/>
+                <path id="Polygon_57" data-name="Polygon 57" d="M10,0,20,25H0Z" transform="translate(25) rotate(90)"
+                  fill="#0297b5" />
               </svg>
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="20" class="arrow-svg" viewBox="0 0 25 20">
-                <path id="Polygon_57" data-name="Polygon 57" d="M10,0,20,25H0Z" transform="translate(25) rotate(90)" fill="#0297b5"/>
+                <path id="Polygon_57" data-name="Polygon 57" d="M10,0,20,25H0Z" transform="translate(25) rotate(90)"
+                  fill="#0297b5" />
               </svg>
             </div>
           </div>
