--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -11,6 +11,7 @@
 @import '1-tools/vars';
 @import '1-tools/normalize';
 @import '1-tools/mixins';
+@import '1-tools/modaal/modaal';
 // @import '1-tools/swiper';
 // @import '1-tools/colorbox';
 
@@ -43,6 +44,7 @@
 @import '3-modules/home';
 @import '3-modules/sidebar';
 @import '3-modules/modal';
+@import '3-modules/comparision';
 
 
 // 4 - pages
